unpackaged/objects/copadovsm__Value_Stream_Map__c.object
<CustomObject>
	<description>Value Stream Map is a highly-regarded way of visualizing the way a team collaborates to deliver valuable work to end users, and to expose waste and bottlenecks in that process.</description>
	<fields>
		<fullName>copadovsm__Activation_Datetime__c</fullName>
		<label>Value Stream Start Date</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copadovsm__Active__c</fullName>
		<defaultValue>true</defaultValue>
		<inlineHelpText>Activating your Value Stream Map will kick off the Event Collection process. Activate your VSM to begin collecting data.</inlineHelpText>
		<label>Active</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copadovsm__Backlog_Criteria__c</fullName>
		<label>Backlog Criteria</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadovsm__Cancelled_Criteria__c</fullName>
		<label>Cancelled Criteria</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadovsm__Completed_Criteria__c</fullName>
		<label>Completed Criteria</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadovsm__Description__c</fullName>
		<label>Description</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadovsm__Error_Message__c</fullName>
		<label>Error Message</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Excluded_Criteria__c</fullName>
		<label>Excluded Criteria</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadovsm__FieldSet_Name__c</fullName>
		<inlineHelpText>FieldSet Name is the name of the fieldset that you created on your primary object. It allows you to display additional columns on your VSM report page.</inlineHelpText>
		<label>FieldSet Name</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Last_Execution_Datetime__c</fullName>
		<description>Last ValueStreamMapFieldHistoryBatch class execution date time</description>
		<label>Last Recalculation Execution Datetime</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copadovsm__Last_Snapshot_Execution_Datetime__c</fullName>
		<label>Last Snapshot Execution Datetime</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copadovsm__Object__c</fullName>
		<inlineHelpText>Primary object that will be used for the Value Stream Map. Each VSM will have a primary object and primary field.</inlineHelpText>
		<label>Object</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Operator_Field__c</fullName>
		<inlineHelpText>This field identifies the primary owner field related to your Primary object. This feeds into the Operator icons within the VSM which shows work distribution and also the Interactive icons to show who owns the work item records.</inlineHelpText>
		<label>Operator Field</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Primary_Field__c</fullName>
		<inlineHelpText>The Primary Field can be any field from the Primary Object associated with your VSM. The values from the Primary Field should define your business process for your Primary Object. The Primary Field will be utilized in the Configuration screen of the VSM.</inlineHelpText>
		<label>Primary Field</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Recalculation_Status__c</fullName>
		<label>Value Stream Map Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Not Required</fullName>
					<default>true</default>
					<label>Recalculation Not Required</label>
				</value>
				<value>
					<fullName>Required</fullName>
					<label>Recalculation Required</label>
				</value>
				<value>
					<fullName>Calculating</fullName>
				</value>
				<value>
					<fullName>Failed</fullName>
					<label>Recalculation Failed</label>
				</value>
				<value>
					<fullName>Snapshot Failed</fullName>
				</value>
				<value>
					<fullName>Snapshot In Progress</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadovsm__Record_Types__c</fullName>
		<inlineHelpText>Record types are associated with the Primary Object selected. These are the record types that should be included in Value Stream Map configuration.</inlineHelpText>
		<label>Record Types</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Snapshot_Mode_Enabled__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Snapshot Mode</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copadovsm__Start_Date__c</fullName>
		<label>Start Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>copadovsm__Threshold_Enabled__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Threshold Enabled</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copadovsm__Version__c</fullName>
		<label>Version</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>Value Stream Map</label>
	<listViews>
		<fullName>copadovsm__All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Value Stream Maps</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>